# www

./: .gitignore  MANIFEST.in  README.md  backend.py  build.py  dev.py  package-lock.json  package.json  pyproject.toml  rollup.config.js
admin/: index.html  package.json  vite.config.ts
backend/: __init__.py  __main__.py  auth.py  hash_pwd.py
front/: vite.config.ts
front/assets/: global.css
front/index/: Index.svelte  index.html
front/login/: Login.svelte
frontend/: package-lock.json  vite.config.ts
frontend/admin/: Admin.svelte  admin.ts  index.html
frontend/index/: index.html
frontend/lib/: WSRewrite.svelte
frontend/login/: index.html
protected/: admin.html  global.css  index.css  index.html  index.js  index.ts  package-lock.json  package.json
protected/src/: BorderCard.svelte  WSRewrite.svelte
public/: LiveControl.svelte  WSRewrite.ts  global.css  index.css  index.html  index.js  index.ts  login.css  login.html  login.js  package-lock.json  package.json  theme.css  vite.config.ts  wsrewrite.js
public/assets/: theme.css
public/contact/: contact.ts  index.html
public/hireme/: hireme.ts  index.html
public/login/: index.css  login.ts
public/scripts/: BorderCard.svelte  Contact.svelte  Index.svelte  index.html
public/src/: BorderCard.svelte  Contact.svelte  Hire.svelte  HireMe.svelte  Index.svelte  Information.svelte  Login.svelte  WSRewrite.svelte  (+1 more)
server/: __main__.py  api.py  auth.py  auth_backends.py  auth_base.py  config.py  core.py  livecontrol.py  requestdb.py  staticfiles.py  webhook.py  wsmanager.py
service/: __init__.py  __main__.py  auth.py  config.py  core.py  hash_pwd.py  livecontrol.py  requestdb.py  staticfiles.py  wsmanager.py
src/: About.svelte  Admin.svelte  App.svelte  BorderCard.svelte  Index.svelte  LiveControl.svelte  Login.svelte  WSRewrite.svelte  admin.ts  index.ts  login.ts
test/: test_config.py
test_server/: test_config.py
(+13 files in other folders)
